--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -68,10 +68,10 @@
             width="108"
             height="108"
             viewBox="0 0 24 24"
-            style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
+            style="fill: #f0efed"
           >
             <path
-              d="M16.939 7.939 12 12.879l-4.939-4.94-2.122 2.122L12 17.121l7.061-7.06z"
+              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
         </button>
