--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -81,8 +81,8 @@
     <main>
       <div class="wrapper">
         <div class="card">
-          <img src="" />
-          <span>PRE-ORDER</span>
+          <img src="../Attachments/Cards/pexels-melvin-buezo-2529148.jpg" />
+          <span class="preO">PRE-ORDER</span>
           <div class="cardContent">
             <h3>PHOTO CONSOLE</h3>
             <h3>599$</h3>
