--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -25,10 +25,10 @@
             <li>
               <a href="#">WORKFLOWS ▼</a>
               <ul class="dropdownlist">
-                <li>AUDIO CONSOLE</li>
-                <li>PHOTO CONSOLE</li>
-                <li>VIDEO CONSOLE</li>
-                <li>MINI CONSOLE</li>
+                <li><a href="#">AUDIO CONSOLE</a></li>
+                <li><a href="#">PHOTO CONSOLE</a></li>
+                <li><a href="#">VIDEO CONSOLE</a></li>
+                <li><a href="#">MINI CONSOLE</a></li>
               </ul>
             </li>
             <li><a href="#">DOWNLOAD</a></li>
@@ -44,13 +44,13 @@
               /></a>
             </li>
             <li>
-              <a href="#">USD ▼</a>
+              <a href="#" onclick="clickfunction()">USD ▼</a>
               <ul class="dropdownlist">
-                <li>USD</li>
-                <li>EUR</li>
-                <li>CAD</li>
-                <li>AUD</li>
-                <li>JOR</li>
+                <li><a href="#">USD</a></li>
+                <li><a href="#">EUR</a></li>
+                <li><a href="#">CAD</a></li>
+                <li><a href="#">AUD</a></li>
+                <li><a href="#">JOR</a></li>
               </ul>
             </li>
           </ul>
@@ -58,17 +58,17 @@
         <div class="HeaderText">
           <h1>
             A SHOE FOR<br />
-            EVERY ATHLEAT...
+            EVERY ATHLETE...
           </h1>
-          <p>Discover the perfect shoe for you.</p>
+          <p>Discover the perfect Shoes for you.</p>
         </div>
         <button class="headerbutton" id="headerbutton">
           <svg
+            class="btnheader"
             xmlns="http://www.w3.org/2000/svg"
             width="108"
             height="108"
             viewBox="0 0 24 24"
-            style="fill: #f0efed"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
@@ -84,10 +84,39 @@
           <img src="../Attachments/Cards/pexels-melvin-buezo-2529148.jpg" />
           <span class="preO">PRE-ORDER</span>
           <div class="cardContent">
-            <h3>PHOTO CONSOLE</h3>
-            <h3>599$</h3>
-            <p>Ideal for photo & video. Adaptable to any workflow</p>
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
           </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/pexels-grailify-4252970.jpg" />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/pexels-hamza-nouasria-12725050.jpg" />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img
+            src="../Attachments/Cards/pexels-terrance-barksdale-10154937.jpg"
+          />
+          <span class="outFStk">OUT OF STOCK</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
         </div>
       </div>
       <div class="MidMainImg"></div>
