fixed the dropdown list
fixed the drop down list and added action to the button in the header

--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -23,8 +23,8 @@
           <ul>
             <li><a href="#">HOW IT WORKS</a></li>
             <li>
-              <a href="#">WORKFLOWS ▼</a>
-              <ul class="dropdownlist">
+              <a href="" id="wrkflows">WORKFLOWS ▼</a>
+              <ul class="dropdownlistOne">
                 <li><a href="#">AUDIO CONSOLE</a></li>
                 <li><a href="#">PHOTO CONSOLE</a></li>
                 <li><a href="#">VIDEO CONSOLE</a></li>
@@ -44,8 +44,8 @@
               /></a>
             </li>
             <li>
-              <a href="#" onclick="clickfunction()">USD ▼</a>
-              <ul class="dropdownlist">
+              <a href="" id="mnyvrsnclk">USD ▼</a>
+              <ul class="dropdownlistTwo">
                 <li><a href="#">USD</a></li>
                 <li><a href="#">EUR</a></li>
                 <li><a href="#">CAD</a></li>
