--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="../Attachments/PNGs/favicon-1616.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoleFit</title>
   </head>
