added more cards

--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="../Attachments/PNGs/favicon-1616.png" type="image/x-icon">
+    <link
+      rel="icon"
+      href="../Attachments/PNGs/favicon-1616.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoleFit</title>
   </head>
@@ -112,6 +116,42 @@
           <img
             src="../Attachments/Cards/pexels-terrance-barksdale-10154937.jpg"
           />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/card10.jpg" />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/card7.jpg" />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/card8.jpg" />
+          <span class="availO">AVIALABLE</span>
+          <div class="cardContent">
+            <h3 class="productName">PHOTO CONSOLE</h3>
+            <h3 class="priceTag">599$</h3>
+          </div>
+          <p>Ideal for photo & video. Adaptable to any workflow</p>
+        </div>
+        <div class="card">
+          <img src="../Attachments/Cards/card12.jpg" />
           <span class="outFStk">OUT OF STOCK</span>
           <div class="cardContent">
             <h3 class="productName">PHOTO CONSOLE</h3>
