added carousel to the website

--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -164,7 +164,25 @@
       <div class="wrapper"></div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section class="container">
+        <div class="slider-wrapper">
+          <div class="slider">
+            <img id="slide-1" src="../Attachments/Carousel/caroOne.jpg" /><img
+              id="slide-2"
+              src="../Attachments/Carousel/caroTwo.jpg"
+            /><img
+              id="slide-3"
+              src="../Attachments/Carousel/caroThree.jpg"
+            /><img id="slide-4" src="../Attachments/Carousel/caroFour.jpg" />
+          </div>
+          <div class="slider-nav">
+            <a href="#slide-1"></a><a href="#slide-2"></a><a href="#slide-3"></a
+            ><a href="#slide-4"></a>
+          </div>
+        </div>
+      </section>
+    </footer>
 
     <script src="index.js"></script>
   </body>
