--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -15,7 +15,48 @@
     <header>
       <div class="HeaderDiv">
         <nav>
-          <div class="sidemenu"></div>
+          <div class="sidemenu">
+            <ul class="sidemenuNav">
+              <li><a href="#">HOW IT WORKS</a></li>
+              <li>
+                <a href="" id="wrkflows">WORKFLOWS ▼</a>
+                <ul class="dropdownlistSideMenu">
+                  <li><a href="#">AUDIO CONSOLE</a></li>
+                  <li><a href="#">PHOTO CONSOLE</a></li>
+                  <li><a href="#">VIDEO CONSOLE</a></li>
+                  <li><a href="#">MINI CONSOLE</a></li>
+                </ul>
+              </li>
+              <li><a href="#">DOWNLOAD</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">SUPPORT</a></li>
+              <li><a href="#">SHOP</a></li>
+              <li class="cart">
+                <a href="#"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M5 22h14c1.103 0 2-.897 2-2V9a1 1 0 0 0-1-1h-3V7c0-2.757-2.243-5-5-5S7 4.243 7 7v1H4a1 1 0 0 0-1 1v11c0 1.103.897 2 2 2zM9 7c0-1.654 1.346-3 3-3s3 1.346 3 3v1H9V7zm-4 3h2v2h2v-2h6v2h2v-2h2l.002 10H5V10z"
+                    ></path></svg
+                  ><a href="#">Cart</a></a
+                >
+              </li>
+              <li class="currencySideMenu">
+                <a href="" id="mnyvrsnclk">USD ▼</a>
+                <ul class="dropdownlistTwoSideMenu">
+                  <li><a href="#">USD</a></li>
+                  <li><a href="#">EUR</a></li>
+                  <li><a href="#">CAD</a></li>
+                  <li><a href="#">AUD</a></li>
+                  <li><a href="#">JOR</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
           <ul class="leftNav">
             <li>
               <img
