--- a/WebFiles/Home.html
+++ b/WebFiles/Home.html
@@ -46,7 +46,7 @@
                 >
               </li>
               <li class="currencySideMenu">
-                <a href="" id="mnyvrsnclk">USD ▼</a>
+                <a href="#" id="mnyvrsnclkSideMenu">USD ▼</a>
                 <ul class="dropdownlistTwoSideMenu">
                   <li><a href="#">USD</a></li>
                   <li><a href="#">EUR</a></li>
